--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Firebid">
-        <activity android:name=".BidActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.firebid.BidActivity"></activity>
+        <activity android:name="com.example.firebid.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
