--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    buildFeatures {
-        viewBinding true
-        dataBinding true
+    dataBinding {
+        enabled = true
+    }
+    viewBinding{
+        enabled = true
     }
 }
 
